--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="SwitchMe.SwitchMeControl"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:SwitchMe" x:Class="SwitchMe.SwitchMeControl"
              mc:Ignorable="d" Height="524" Width="503">
     <StackPanel Height="491" VerticalAlignment="Top">
         <Label x:Name="popupTarget" FontWeight="Bold" FontSize="16" Content="SwitchMe Configuration:" Height="27" Margin="1,0,0,0" />
@@ -39,8 +40,24 @@
         <StackPanel Orientation="Horizontal">
             <Label Content="Public IP of this server:"/>
             <TextBox x:Name="txtServerLocalIP" Width="169" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding LocalIP}" />
-            
+
         </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Label Content="Activation key:" Width="129"/>
+            <TextBox  Width="169" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding ActivationKey}" />
+
+        </StackPanel>
+        <Label Width="Auto">
+            <Hyperlink NavigateUri="http://switchplugin.net/donate" RequestNavigate="Hyperlink_RequestNavigate">
+                <Run Text="What aditional features do you get with a key?"/>
+            </Hyperlink>
+        </Label>
+        <Label Width="Auto">
+            <Hyperlink NavigateUri="https://www.paypal.com/paypalme2/startgatesurvival" RequestNavigate="Hyperlink_RequestNavigate">
+                <Run Text="Like the plugin? You can donate here!"/>
+            </Hyperlink>
+        </Label>
+        
         <Label Height="7">
             <LineBreak/>
         </Label>
@@ -79,6 +96,8 @@
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
+
+        <local:SwitchMeControl d:LayoutOverrides="Height"/>
 
     </StackPanel>
 </UserControl>
