--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl
+﻿<UserControl x:Class="SwitchMe.SwitchMeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:SwitchMe" x:Class="SwitchMe.SwitchMeControl"
-             mc:Ignorable="d" Height="524" Width="503">
-    <StackPanel Height="491" VerticalAlignment="Top">
+             mc:Ignorable="d" Height="731" Width="503">
+    <StackPanel Height="723" VerticalAlignment="Top">
         <Label x:Name="popupTarget" FontWeight="Bold" FontSize="16" Content="SwitchMe Configuration:" Height="27" Margin="1,0,0,0" />
         <DockPanel Height="31" LastChildFill="False" Margin="0,0,20,0" HorizontalAlignment="Right" Width="481">
             <Border DockPanel.Dock="Bottom" Height="29" Margin="0,0,-10,0" HorizontalAlignment="Right" Width="492">
@@ -40,24 +39,21 @@
         <StackPanel Orientation="Horizontal">
             <Label Content="Public IP of this server:"/>
             <TextBox x:Name="txtServerLocalIP" Width="169" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding LocalIP}" />
-
         </StackPanel>
         <StackPanel Orientation="Horizontal">
-            <Label Content="Activation key:" Width="129"/>
-            <TextBox  Width="169" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding ActivationKey}" />
-
+            <Label Content="Activation Key:" Width="129"/>
+            <TextBox x:Name="txtServerKey" Width="169" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding ActivationKey}" />
         </StackPanel>
-        <Label Width="Auto">
-            <Hyperlink NavigateUri="http://switchplugin.net/donate" RequestNavigate="Hyperlink_RequestNavigate">
-                <Run Text="What aditional features do you get with a key?"/>
-            </Hyperlink>
-        </Label>
         <Label Width="Auto">
             <Hyperlink NavigateUri="https://www.paypal.com/paypalme2/startgatesurvival" RequestNavigate="Hyperlink_RequestNavigate">
                 <Run Text="Like the plugin? You can donate here!"/>
             </Hyperlink>
         </Label>
-        
+        <Label Width="Auto">
+            <Hyperlink NavigateUri="http://switchplugin.net" RequestNavigate="Hyperlink_RequestNavigate">
+                <Run Text="Click here to find out what features you unlock when you donate monthly"/>
+            </Hyperlink>
+        </Label>
         <Label Height="7">
             <LineBreak/>
         </Label>
@@ -88,7 +84,7 @@
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Height="151">
-            <DataGrid x:Name="dgServerList" Width="497" Margin="3,3,3,-49" AutoGenerateColumns="False" SelectionChanged="DgServerList_SelectionChanged" IsReadOnly="True" Height="197" VerticalAlignment="Top">
+            <DataGrid x:Name="dgServerList" Width="497" Margin="3,3,3,-38" AutoGenerateColumns="False" SelectionChanged="DgServerList_SelectionChanged" IsReadOnly="True" Height="186" VerticalAlignment="Top">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding SERVER}" Header="Server Name" Width="165"/>
                     <DataGridTextColumn Binding="{Binding IP}" Header="Server IP" Width="165"/>
@@ -96,8 +92,6 @@
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
-
-        <local:SwitchMeControl d:LayoutOverrides="Height"/>
 
     </StackPanel>
 </UserControl>
