Updated locked transfers to make pasting within 50m of specified GPS also fixed bug which killed a player if locked transfers were enabled (they were teleported into a grid)
Also started work on a debug command which will check the web API's response if changes are made and log the responses in console and torch log

--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -19,6 +19,7 @@
         </DockPanel>
         <CheckBox Content="Enabled" Margin="3" IsChecked="{Binding Enabled}" ToolTip="Enable or disable SwitchMe"/>
         <CheckBox Content="Enable outbound grid transfers" Margin="3" IsChecked="{Binding EnabledTransfers}" ToolTip="Enable or disable grid transfers on SwitchMe" Height="18"/>
+        <CheckBox Content="Enable inbound grid transfers" Margin="3" IsChecked="{Binding InboundTransfersState}" ToolTip="Enable or disable inbound grid transfers on SwitchMe" Height="18"/>
         <Label Height="3">
             <LineBreak/>
         </Label>
