--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" Height="839.35" Width="503">
-    <StackPanel Height="840" VerticalAlignment="Top" Margin="0,0,0,-1">
+             mc:Ignorable="d" Height="926.35" Width="503">
+    <StackPanel Height="914" VerticalAlignment="Top">
         <Label x:Name="popupTarget" FontWeight="Bold" FontSize="16" Content="SwitchMe Configuration:" Height="31" Margin="1,0,0,0" />
         <DockPanel Height="31" LastChildFill="False" Margin="0,0,20,0" HorizontalAlignment="Right" Width="481">
             <Border DockPanel.Dock="Bottom" Height="27" Margin="-1,0,-10,0" HorizontalAlignment="Right" Width="492">
@@ -23,6 +23,19 @@
         <Label Height="3">
             <LineBreak/>
         </Label>
+
+        <Label FontWeight="Bold" FontSize="13" Content="Economy settings:" Height="26" Margin="1,0,0,0" />
+        <CheckBox Content="Enable" Margin="6,3,3,3" IsChecked="{Binding EnableEcon}" ToolTip="Enable or economy integration"/>
+        <RadioButton GroupName="econ" IsChecked="{Binding PerTransfer}" Content="Per transfer cost" Margin="28,0,0,0"/>
+        <Label Height="3">
+            <LineBreak/>
+        </Label>
+        <RadioButton GroupName="econ" IsChecked="{Binding PerBlock}" Content="Per block cost" Margin="28,0,0,0"/>
+        <StackPanel Orientation="Horizontal" Margin="28,0,0,0">
+            <Label Content="Cost:"/>
+            <TextBox Width="99" Margin="3,0,0,0" HorizontalAlignment="Right" PreviewTextInput="NumberValidationTextBox" Height="20" Text="{Binding TransferCost}" />
+        </StackPanel>
+
         <Label FontWeight="Bold" FontSize="13" Content="Position settings:" Height="26" Margin="1,0,0,0" />
         <Label Content="DO NOT ENABLE IF YOU HAVE A WORLD LIMIT!" FontSize="9" />
         <CheckBox Content="Enable positioning" Margin="3,3,3,3" IsChecked="{Binding EnabledMirror}" ToolTip="Forces players to spawn at a co-ordinate they transfered from"/>
@@ -96,7 +109,7 @@
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Height="199">
-            <DataGrid x:Name="dgServerList" Width="497" Margin="3,3,3,24" AutoGenerateColumns="False" SelectionChanged="DgServerList_SelectionChanged" IsReadOnly="True">
+            <DataGrid x:Name="dgServerList" Width="497" Margin="3,3,3,18" AutoGenerateColumns="False" SelectionChanged="DgServerList_SelectionChanged" IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding SERVER}" Header="Server Name" Width="165"/>
                     <DataGridTextColumn Binding="{Binding IP}" Header="Server IP" Width="165"/>
