Addition of controls and logic for Block checking

--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" Height="926.35" Width="503">
-    <StackPanel Height="914" VerticalAlignment="Top">
+             mc:Ignorable="d" Height="1100.35" Width="503">
+    <StackPanel Height="1090" VerticalAlignment="Top" Margin="0,0,0,-164">
         <Label x:Name="popupTarget" FontWeight="Bold" FontSize="16" Content="SwitchMe Configuration:" Height="31" Margin="1,0,0,0" />
         <DockPanel Height="31" LastChildFill="False" Margin="0,0,20,0" HorizontalAlignment="Right" Width="481">
             <Border DockPanel.Dock="Bottom" Height="27" Margin="-1,0,-10,0" HorizontalAlignment="Right" Width="492">
@@ -24,7 +24,7 @@
             <LineBreak/>
         </Label>
 
-        <Label FontWeight="Bold" FontSize="13" Content="Economy settings:" Height="26" Margin="1,0,0,0" />
+        <Label FontWeight="Bold" FontSize="13" Content="Economy settings:" Height="31" Margin="1,0,0,0" />
         <CheckBox Content="Enable" Margin="6,3,3,3" IsChecked="{Binding EnableEcon}" ToolTip="Enable or economy integration"/>
         <RadioButton GroupName="econ" IsChecked="{Binding PerTransfer}" Content="Per transfer cost" Margin="28,0,0,0"/>
         <Label Height="3">
@@ -35,6 +35,23 @@
             <Label Content="Cost:"/>
             <TextBox Width="99" Margin="3,0,0,0" HorizontalAlignment="Right" PreviewTextInput="NumberValidationTextBox" Height="20" Text="{Binding TransferCost}" />
         </StackPanel>
+
+        <Label Height="3">
+            <LineBreak/>
+        </Label>
+
+        <Label FontWeight="Bold" FontSize="13" Content="Block settings:" Height="29" Margin="1,0,0,0" />
+        <CheckBox Content="Enable" Margin="6,3,3,3" IsChecked="{Binding EnableBlockEnforcement}" ToolTip="Enable or economy integration"/>
+        <RadioButton GroupName="block" IsChecked="{Binding BlockAllow}" Content="Allow transfers with Certain Blocks" Margin="28,0,0,0"/>
+        <Label Height="3">
+            <LineBreak/>
+        </Label>
+        <RadioButton GroupName="block" IsChecked="{Binding BlockDisallow}" Content="Disallow transfers with Certain Blocks" Margin="28,0,0,0"/>
+        <StackPanel Orientation="Horizontal" Margin="28,0,0,0">
+            <Label Content="Subtypes to whitelist/blacklist:"/>
+            <TextBox Width="99" Margin="3,0,0,0" HorizontalAlignment="Right" PreviewTextInput="NumberValidationTextBox" Height="20" Text="{Binding SubTypes}" />
+        </StackPanel>
+        <Label Content="Seperate by - (e.g: SmallBlockSmallThrust-LargeBlockSmallThrust)" FontSize="9" Margin="28,0,0,0" />
 
         <Label FontWeight="Bold" FontSize="13" Content="Position settings:" Height="26" Margin="1,0,0,0" />
         <Label Content="DO NOT ENABLE IF YOU HAVE A WORLD LIMIT!" FontSize="9" />
