--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" Height="1100.35" Width="503">
-    <StackPanel Height="1090" VerticalAlignment="Top" Margin="0,0,0,-164">
+             mc:Ignorable="d" Height="1186.35" Width="503">
+    <StackPanel Height="1176" VerticalAlignment="Top">
         <Label x:Name="popupTarget" FontWeight="Bold" FontSize="16" Content="SwitchMe Configuration:" Height="31" Margin="1,0,0,0" />
         <DockPanel Height="31" LastChildFill="False" Margin="0,0,20,0" HorizontalAlignment="Right" Width="481">
             <Border DockPanel.Dock="Bottom" Height="27" Margin="-1,0,-10,0" HorizontalAlignment="Right" Width="492">
@@ -20,6 +20,33 @@
         <CheckBox Content="Enabled" Margin="3" IsChecked="{Binding Enabled}" ToolTip="Enable or disable SwitchMe"/>
         <CheckBox Content="Enable outbound grid transfers" Margin="3" IsChecked="{Binding EnabledTransfers}" ToolTip="Enable or disable grid transfers on SwitchMe" Height="18"/>
         <CheckBox Content="Enable inbound grid transfers" Margin="3" IsChecked="{Binding InboundTransfersState}" ToolTip="Enable or disable inbound grid transfers on SwitchMe" Height="18"/>
+        <Label Height="3">
+            <LineBreak/>
+        </Label>
+
+        <Label Content="Co-ordinates for Recover on connect and Locked positioning:" FontSize="10" />
+        <StackPanel Orientation="Horizontal">
+            <Label Content="X:"/>
+            <TextBox Width="99" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding XCord}" />
+            <Label Content="Y:"/>
+            <TextBox Width="98" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding YCord}" />
+            <Label Content="Z:"/>
+            <TextBox Width="99" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding ZCord}" />
+        </StackPanel>
+
+        <Label FontWeight="Bold" FontSize="13" Content="Recovery mode:" Height="31" Margin="1,0,0,0" />
+        <RadioButton GroupName="recovery" IsChecked="{Binding RecoverCommandBased}" Content="Recover via command (!switch recover)" Margin="28,0,0,0"/>
+        <Label Height="3">
+            <LineBreak/>
+        </Label>
+        <RadioButton GroupName="recovery" IsChecked="{Binding RecoverOnJoin}" Content="Recover on player connect" Margin="28,0,0,0"/>
+
+        <Label FontWeight="Bold" FontSize="13" Content="Position settings: (Required for recover on connect)" Height="27" Margin="1,0,0,0" />
+        <Label Content="DO NOT ENABLE IF YOU HAVE A WORLD LIMIT!" FontSize="9" Margin="28,0,0,0" />
+        <RadioButton GroupName="positioning" Content="Enable mirrored positioning" Margin="31,3,3,3" IsChecked="{Binding EnabledMirror}" ToolTip="Forces players to spawn at a co-ordinate they transfered from"/>
+        <RadioButton GroupName="positioning" Content="Lock recoveries to a certain GPS position" Margin="31,3,3,3" IsChecked="{Binding LockedTransfer}" ToolTip="Forces players to spawn at a co-ordinate they transfered from"/>
+        <CheckBox Content="Enable specified positioning settings for recover command" Margin="3,3,3,3" IsChecked="{Binding EnabledPositioning}" ToolTip="Forces players to spawn at a co-ordinate they transfered from"/>
+
         <Label Height="3">
             <LineBreak/>
         </Label>
@@ -52,20 +79,6 @@
             <TextBox Width="278" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding SubTypes}" />
         </StackPanel>
         <Label Content="Seperate by - (e.g: SmallBlockSmallThrust-LargeBlockSmallThrust)" FontSize="9" Margin="28,0,0,0" />
-
-        <Label FontWeight="Bold" FontSize="13" Content="Position settings:" Height="26" Margin="1,0,0,0" />
-        <Label Content="DO NOT ENABLE IF YOU HAVE A WORLD LIMIT!" FontSize="9" />
-        <CheckBox Content="Enable positioning" Margin="3,3,3,3" IsChecked="{Binding EnabledMirror}" ToolTip="Forces players to spawn at a co-ordinate they transfered from"/>
-        <Label Content="Positioning needs to be enabled to make locking take effect." FontSize="9" />
-        <CheckBox Content="Lock recoveries to a certain GPS position" Margin="3,3,3,3" IsChecked="{Binding LockedTransfer}" ToolTip="Forces players to spawn at a co-ordinate they transfered from"/>
-        <StackPanel Orientation="Horizontal">
-            <Label Content="X:"/>
-            <TextBox Width="99" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding XCord}" />
-            <Label Content="Y:"/>
-            <TextBox Width="98" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding YCord}" />
-            <Label Content="Z:"/>
-            <TextBox Width="99" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding ZCord}" />
-        </StackPanel>
 
         <Label Content="Add Servers to link here:" />
         <Label Content="*Please note that the Target server IP has to be the same your players connect to!" FontSize="9" />
