--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -74,11 +74,14 @@
             <LineBreak/>
         </Label>
         <RadioButton GroupName="block" IsChecked="{Binding BlockDisallow}" Content="Disallow transfers with Certain Blocks" Margin="28,0,0,0"/>
-        <StackPanel Orientation="Horizontal" Margin="28,0,0,0">
-            <Label Content="Subtypes to whitelist/blacklist:"/>
-            <TextBox Width="278" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding SubTypes}" />
+        <Label Content="Subtypes to whitelist/blacklist:"/>
+        <Label Content="Seperate by , (e.g: SmallBlockSmallThrust,LargeBlockSmallThrust)" FontSize="11" Margin="31,0,0,0" />
+        <StackPanel Orientation="Horizontal" Margin="31,0,0,0">
+            <TextBox TextWrapping="Wrap"
+                     AcceptsReturn="True"
+                     HorizontalScrollBarVisibility="Disabled"
+                     VerticalScrollBarVisibility="Auto" Width="290" Margin="3,0,0,0" HorizontalAlignment="Right" Height="42" Text="{Binding SubTypes}" />
         </StackPanel>
-        <Label Content="Seperate by - (e.g: SmallBlockSmallThrust-LargeBlockSmallThrust)" FontSize="9" Margin="28,0,0,0" />
 
         <Label Content="Add Servers to link here:" />
         <Label Content="*Please note that the Target server IP has to be the same your players connect to!" FontSize="9" />
@@ -147,6 +150,7 @@
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
+        <DataGrid Height="100"/>
 
     </StackPanel>
 </UserControl>
