--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" Height="1235.683">
+             mc:Ignorable="d" Height="1492.849">
     <StackPanel Margin="0,0,0,10">
         <Label x:Name="popupTarget" FontWeight="Bold" FontSize="16" Content="SwitchMe Configuration:" Height="31" Margin="1,0,0,0" />
         <DockPanel Height="31" LastChildFill="False" Margin="0,0,20,0">
@@ -23,7 +23,6 @@
         <Label Height="3">
             <LineBreak/>
         </Label>
-
         <Label Content="Co-ordinates for Recover on connect and Locked positioning:" FontSize="10" />
         <StackPanel Orientation="Horizontal">
             <Label Content="X:"/>
@@ -40,6 +39,36 @@
             <LineBreak/>
         </Label>
         <RadioButton GroupName="recovery" IsChecked="{Binding RecoverOnJoin}" Content="Recover on player connect" Margin="28,0,0,0"/>
+        <Label Height="3">
+            <LineBreak/>
+        </Label>
+        <Label FontWeight="Bold" FontSize="13" Content="Jumpgates:" Height="31" Margin="1,0,0,0" />
+        <StackPanel Orientation="Horizontal">
+            <Label Content="Target Server Name:"/>
+            <TextBox x:Name="txtGateTarget" Width="169" Margin="19,3,0,3" HorizontalAlignment="Right" Height="20" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Label Content="Gate GPS:"/>
+            <Label Content="X:" Width="23"/>
+            <TextBox Width="90" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" x:Name="XCordGate" />
+            <Label Content="Y:" Width="20"/>
+            <TextBox Width="86" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" x:Name="YCordGate"/>
+            <Label Content="Z:" Width="20"/>
+            <TextBox Width="88" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" x:Name="ZCordGate" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Button x:Name="btnAddGate" Width="100" Content="Add Server" Margin="3"  Height="22" Click="btnAddGate_Click" />
+            <Button x:Name="btnDelGate" Width="100" Content="Delete Server" Margin="3" Click="btnDelGate_Click" />
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal" Height="93">
+            <DataGrid x:Name="dgServerGates" ColumnWidth="*" Width="495" Margin="3,3,3,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionChanged="dgServerGates_SelectionChanged">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding GateTarget}" Header="Target Server"/>
+                    <DataGridTextColumn Binding="{Binding GPS}" Header="GPS"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
 
         <Label FontWeight="Bold" FontSize="13" Content="Position settings: (Required for recover on connect)" Height="27" Margin="1,0,0,0" />
         <Label Content="DO NOT ENABLE IF YOU HAVE A WORLD LIMIT!" FontSize="9" Margin="28,0,0,0" />
@@ -148,5 +177,12 @@
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
+
+
+        
+
+
+
+
     </StackPanel>
 </UserControl>
