--- a/SwitchMe/SwitchMeControl.xaml
+++ b/SwitchMe/SwitchMeControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" Height="1492.849">
+             mc:Ignorable="d" Height="1299.924">
     <StackPanel Margin="0,0,0,10">
         <Label x:Name="popupTarget" FontWeight="Bold" FontSize="16" Content="SwitchMe Configuration:" Height="31" Margin="1,0,0,0" />
         <DockPanel Height="31" LastChildFill="False" Margin="0,0,20,0">
@@ -25,6 +25,7 @@
         </StackPanel>
         <CheckBox Content="Enable outbound grid transfers" Margin="3" IsChecked="{Binding EnabledTransfers}" ToolTip="Enable or disable grid transfers on SwitchMe" Height="18"/>
         <CheckBox Content="Enable inbound grid transfers" Margin="3" IsChecked="{Binding InboundTransfersState}" ToolTip="Enable or disable inbound grid transfers on SwitchMe" Height="18"/>
+        <CheckBox Content="Randomise exit gate" Margin="3" IsChecked="{Binding RandomisedExit}" ToolTip="Randomise exit gate on target server..." Height="18"/>
         <StackPanel Orientation="Horizontal">
             <Label Content="Radius of jumpgate (Meters):"/>
             <TextBox x:Name="txtSafeRange" Width="29" Margin="3,0,0,0" HorizontalAlignment="Right" Height="20" Text="{Binding GateSize}" />
